css/style.css
html,
body {
    height: 100%;
    margin: 0;
    font-family: 'Montserrat', sans-serif;
    scroll-behavior: smooth;
}

#bg {
    width: 100%;
    height: 100%;
    z-index: -1;

    background: rgb(32,100,233);
    background: -moz-linear-gradient(117deg, rgba(32,100,233,1) 0%, rgba(173,23,206,1) 100%);
    background: -webkit-linear-gradient(117deg, rgba(32,100,233,1) 0%, rgba(173,23,206,1) 100%);
    background: linear-gradient(117deg, rgba(32,100,233,1) 0%, rgba(173,23,206,1) 100%);
    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#2064e9",endColorstr="#ad17ce",GradientType=1);
}

#adrian-img {
    object-fit: cover;
    object-position: 0% 10%;
    width: 150px;
    height: 150px;
    margin-left: auto;
    margin-right: auto;
    margin-top: 30px;
}

#logo {
    color: rgba(32,100,233,1);
    width: 32px;
    height: 32px;
    text-align: center;
}

/* underline effects */
.un {
    position: relative;
}

.un::before {
    position: absolute;
    content: '';
    width: 0px;
    left: 50%;
    height: 1px;
    display: block;
    background: white;
    transition: 300ms;
    bottom: -5px;
    opacity: 0;
}

.un:hover::before {
    width: 50%;
    opacity: 1;
}

.un::after {
    position: absolute;
    content: '';
    width: 0px;
    right: 50%;
    height: 1px;
    display: block;
    background: white;
    transition: 300ms;
    opacity: 0;
}

.un:hover::after {
    width: 50%;
    opacity: 1;
}

